# trade-analyst

./: .env.example  .gitattributes  .gitignore  .yamllint  ACCEPTANCE_CHECKLIST_ASSESSMENT.md  Dockerfile  Full_System_Test_Report.md  GITHUB_UPDATE_GUIDE.md  GO_NO_GO_PLAN.md  IMPLEMENTATION_SUMMARY.md  Implementation_Guidelines_HPF.md  LEVELS_V1_IMPLEMENTATION.md  PHASE_ASSESSMENT_REPORT.md  PRODUCTION_STUB_SAFETY.md  Phase3_Exchange_Calendar_Implementation.md  README.md  RFP_SUMMARY.md  TO1_Status.md  Task-Order-Version-Control.md  UTC_Implementation_Instructions.md  apply_utc_patch.ps1  check_production.py  cli.py  config.toml  constraints.txt  demo_levels_v1.py  dependencies_issues.txt  dev-requirements.in  get_current_nq.py  get_ohlc.py  get_ohlc_enhanced.py  oauth_preflight_report.json  oauth_preflight_report_cli.json  optional-requirements.in  production_calc_levels.py  pyproject.toml  pytest.ini  quick_verify.py  requirements-dev.txt  requirements.in  (+15 more)
.tmp_utc_patch/: smoke_quotes.py  smoke_token.py
.venv_fix/: pyvenv.cfg
app/: __init__.py  appstart.py  auth.py  callback_checker.py  config.py  error_handlers.py  errors.py  guardrails.py  healthcheck.py  historical.py  logging.py  main.py  options.py  pkce.py  production_provider.py  quotes.py  server.py  systeminit.py  timesales.py  writers.py
cli_start_bundle_v2/: README_CLI.md  pyproject.additions.toml  start.py
docs/: DEVELOPER_GUIDE.md  LEVELS_V1_SCHEMA.md  PRODUCTION_SAFETY.md  README.md  RFP_Schwab_Historical_API_Integration.md  USER_GUIDE.md  metrics.md
schwab_exporter_TO1_1_HP/: config.py  (+3 more)
(+82 files in other folders)
